addressed firefox bug
fixed focusing not working
cursor is now text cursor to indicate editing. caret is not showing up

--- a/styles.css
+++ b/styles.css
@@ -146,7 +146,7 @@ h1 {
     border: 1px solid black;
     border-radius: 3px;
     background-color: white;
-    cursor: default;
+    cursor: text;
 }
 
 .toolbarBtn {
@@ -234,7 +234,7 @@ h1 {
     border: 1px solid black;
     border-radius: 3px;
     background-color: white;
-    cursor: default;
+    cursor: text;
 }
 
 .toolbarBtn {
